--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -131,7 +131,7 @@ and latex-tikz codes from
 \begin{lstlisting}
 https://github.com/VIB2020/AI1103/blob/main/Assignment%203/Assignment%203.pdf
 \end{lstlisting}
-\section{\Large Problem \\ \large GATE 2015 (EE paper 01 new 2), Q 27 (Electrical Engg section)}
+\section{\large GATE 2015 (EE paper 01 new 2), Q 27 (Electrical Engg section)}
 Two players A, and B alternately keep rolling a fair dice. The person to get a six first wins the game. Given that player A starts the game, the probability that A wins the game is:\\[5pt]
     A $\dfrac{5}{11}$ \hspace{1cm}
     B $\dfrac{1}{2}$ \hspace{1cm}
@@ -159,7 +159,7 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
             (a) edge[bend right=20] node {$q = \dfrac{5}{6}$} (b)
             (b) edge[bend right=20] node {$q = \dfrac{5}{6}$} (a)
             (a) edge[bend right=20] node {$p = \dfrac{1}{6}$} (w)
-            (b) edge[bend left=20, auto=left] node {$p =     \dfrac{1}{6}$} (w)
+            (b) edge[bend left=20, auto=left] node {$p =     \dfrac{1}{6}$} (w);
     \end{tikzpicture}
 \end{center}
 \begin{definition}
@@ -173,7 +173,7 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
 
 \begin{lemma} \large
     \begin{align*}
-        \lim_{n \to \infty}Pr_{AW}(n) = 0
+        \lim_{n \to \infty}p_{AW}(n) = 0
     \end{align*}
 \end{lemma}
 \begin{proof}
@@ -181,52 +181,65 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
         p , q < 1
         \implies \lim_{n \to \infty} P^n \xrightarrow{} 0\\
         \implies P \text{ is reducible}\\
-        \therefore \lim_{n \to \infty}Pr_{AW}(n) = 0
+        \therefore \lim_{n \to \infty}p_{AW}(n) = 0
     \end{align*}
 \end{proof}
 \begin{definition}
-    P$^n$ represents n rolls of dice\\
-    Given: A starts the game\\
-    Constraint: A wins the game.\\
-    The initial operator representing this constraint:\\
-    
-    A$_1 = \myvec{p & 0 & 0}$
+    Operator $A_i$ corresponds to the state of the game on the $i_{th}$ roll of dice.\\
+    $P^n$ is the corresponding Transition matrix for n rolls of dice\\
 \end{definition}
+
+\begin{lemma}
+    The operator corresponding to the initial state i.e the first throw of dice is:
+    \begin{align*}
+        A_1 = \myvec{p & 0 & 0}
+    \end{align*}
+\end{lemma}
+\begin{proof}
+    Given: A starts the game.\\
+    Constraint: A wins the game.\\
+    $\implies$ \pr{\text{B winning on first throw}} = $p_{BW}(1)$ = 0\\
+    \pr{\text{A winning on first throw}} = $p_{AW}(1)$ = p\\
+    $\therefore$ Operator corresponding this state is:
+    \begin{align*}
+        A_1 = \myvec{p & 0 & 0}
+    \end{align*}
+\end{proof}
 \begin{remark}
     First element of each A$_i$ represents the probability of A to win in i$^{th}$ roll
 \end{remark}
 
 \begin{align*}
-    \implies Pr_{AW}(1) = p\\
+    \implies p_{AW}(1) = p\\
     A_2 = A_1 P = \myvec{p & 0 & 0}\myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}  = \myvec{0 & qp & 0}\\
-    \implies  Pr_{AW}(2) = 0\\
+    \implies  p_{AW}(2) = 0\\
     A_3 = A_2 P = \myvec{0 & qp & 0} \myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}= \myvec{q^2 p & 0 & 0}\\
-    \implies  Pr_{AW}(3) = q^2 p
+    \implies  p_{AW}(3) = q^2 p
 \end{align*}
 
 \centering \begin{tabular}{|c|c|c|}
     \hline\
     A&No.of Turns & Probability \\
     \hline
-    Pr$_{AW}$(1) & 1 & p = 1/6\\
+    p$_{AW}$(1) & 1 & p = 1/6\\
     \hline
-    Pr$_{AW}$(2) & 2 & 0\\
+    p$_{AW}$(2) & 2 & 0\\
     \hline
-    Pr$_{AW}$(3) & 3 & q$^{2p}$\\
+    p$_{AW}$(3) & 3 & q$^{2p}$\\
     \hline
     .&.&.\\
     .&.&.\\
-    Pr$_{AW}$(2n) & 2n & 0\\
+    p$_{AW}$(2n) & 2n & 0\\
     \hline
-    Pr$_{AW}$(2n+1) & 2n + 1 & q$^{2n}$p\\
+    p$_{AW}$(2n+1) & 2n + 1 & q$^{2n}$p\\
     \hline
     \multicolumn{3}{c}{Table:1 Summary of Probabilities}\\
 \end{tabular}
 
 \begin{align*}
 \onehalfspacing
-    \pr{\text{A wins}} = \sum_{n=1}^{\infty} Pr_{AW}(n)\\
-    = Pr_{AW}(1) + Pr_{AW}(2) + Pr_{AW}(3) + ....\\
+    \pr{\text{A wins}} = \sum_{n=1}^{\infty} p_{AW}(n)\\
+    = p_{AW}(1) + p_{AW}(2) + p_{AW}(3) + ....\\
     = p + 0 + q^2p + 0 + q^4p + ....\\
     = \sum_{k=1}^{\infty} (q^2)^k p
     = p \sum_{k=1}^{\infty} (q^2)^k \hspace{0.5cm} \text{But $|q| <$ 1}\\
