--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -15,6 +15,8 @@
 \usepackage{cite}
 \usepackage{cases}
 \usepackage{subfig}
+\usepackage{mathtools}  
+\usepackage{xfrac} 
 
 \usepackage{longtable}
 \usepackage{multirow}
@@ -131,10 +133,12 @@ https://github.com/VIB2020/AI1103/blob/main/Assignment%203/Assignment%203.pdf
 \end{lstlisting}
 \section{\large GATE 2015 (EE paper 01 new 2), Q 27 (Electrical Engg section)}
 Two players A, and B alternately keep rolling a fair dice. The person to get a six first wins the game. Given that player A starts the game, the probability that A wins the game is:\\[5pt]
-    A $\dfrac{5}{11}$ \hspace{1cm}
-    B $\dfrac{1}{2}$ \hspace{1cm}
-    C $\dfrac{7}{13}$ \hspace{1cm}
-    D $\dfrac{6}{11}$ \hspace{1cm}
+\begin{enumerate}[label=(\Alph*)]
+    \item $\dfrac{5}{11}$\\
+    \item $\dfrac{1}{2}$ \\
+    \item $\dfrac{7}{13}$\\
+    \item $\dfrac{6}{11}$
+\end{enumerate}
 \section{\Large Solution}
 \begin{itemize}
     \item Given the die is fair.
@@ -142,7 +146,7 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
     The probability of getting 6 = $\dfrac{1}{6}$ = p (say)\\
     The probability of NOT getting 6 = $\dfrac{5}{6}$ = q (say)
 \end{itemize}
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \begin{tikzpicture}[roundnode/.style={circle, draw=black!90, fill=black!7, very thick, minimum size=1.2cm}]
         \node [roundnode] at (0, 0)     (a)     {1};
@@ -209,7 +213,7 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
 \begin{align}
     \intertext{Given: A throws first.}
     \implies p_{13}(1) = X_{13} = p 
-    \intertext{After second throw: (by B)}
+    \intertext{After second throw (by B):}
     X^2 = \myvec{0 & q & p\\ q & 0 & p\\ 0 & 0 & 0} \myvec{0 & q & p\\ q & 0 & p\\ 0 & 0 & 0}\\
     = \myvec{ 0 & 0 & 0\\0 & q^2 & qp\\0 & 0 & 0}
     \implies  p_{13}(2) = 0\\
