--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -88,7 +88,6 @@
 \providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
 \newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
 \newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
-\numberwithin{equation}{subsection}
 \makeatletter
 \@addtoreset{figure}{problem}
 \makeatother
@@ -101,14 +100,8 @@
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 
-\lstset{
-%language=C,
-frame=single, 
-breaklines=true,
-columns=fullflexible
-}
+\lstset{frame = single, breaklines = true, columns = fullflexible }
 \begin{document}
-
 \title{Assignment 2}
 \author{Vibhavasu Pasumarti - EP20BTECH11015}
 \maketitle
@@ -132,42 +125,45 @@ An unbalanced dice (with 6 faces, numbered from 1 to 6) is thrown. The probabili
     \item  0.485
     \item  0.492
 \end{enumerate}
+
 \section{\Large Solution}
 \onehalfspacing
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|c|c|c|}
+        \hline
+        Random & Corresponding & Possible\\
+        variable & event & values \\\hline
+        \multirow{2}{*}{X} & Face value is &\multirow{2}{*}{2, 4, 6} \\&  EVEN   &\\\hline
+        \multirow{2}{*}{Y} & Face value is &\multirow{2}{*}{1, 3, 5}  \\& ODD &\\\hline
+    \end{tabular}
+\end{table}
 \begin{description}
-\item Let $X$ denote the independent event of EVEN number appearing on the dice.
-\item $X$ can take the values 2, 4, 6 all of which are EQUALLY likely.
-\item Let $Y$ denote the independent event of ODD number appearing on the dice. 
-\item Y can take the values 1, 3, 5
-\item To find: probability that the face value exceeds 3
+\item $\implies$ X and Y are independent.
+\item To find: probability that the face value exceeds 3.
 \item Sum of all probabilities = 1
 \end{description}
+\doublespacing
 \begin{align}
-    \pr{X} + \pr{Y} = 1
-\end{align}
-Given probability that the face value is odd is 90\% of the probability that the face value is even
-\begin{align}
+    \implies \pr{X} + \pr{Y} = 1
+    \intertext{Given probability that the face value is odd is 90\% of the probability that the face value is even}
     \pr{Y} = 0.9\pr{X}\\
-    \implies \pr{X}\times (1 + 0.9) = 1\\
+    \implies \pr{X} \times (1 + 0.9) = 1\\
     \pr{X} = \frac{10}{19} \implies \pr{Y} = \frac{9}{19}
-\end{align}
-Given: X = 2, X = 4, X = 6 are EQUALLY likely
-\begin{align}
-    \pr{X = 2} = \pr{X = 4}\\
-    = \pr{X = 6} = \dfrac{\pr{X}}{3} = \dfrac{10}{57}\\
-    \pr{\dfrac{X}{(X > 3) + (Y > 3)}} = 0.75\\
-    \dfrac{\pr{X = 4} + \pr{X = 6}}{\pr{X = 4} + \pr{Y = 5} + \pr{X = 6}}\\
-    = 0.75\\
-    \pr{Y = 5} = \dfrac {\pr{X = 4} + \pr{X = 6}}{3}\\
-    = \frac{1}{3}\times\frac{20}{57} = \frac{20}{171}\\
-    \pr{(X > 3) + (Y > 3)}\\
-    = \pr{X > 3} + \pr{Y > 3}\\
-    = \pr{X = 4} + \pr{Y = 5}\ + \pr{X = 6}\\
-    = \dfrac{10}{57} + \dfrac{10}{57} + \dfrac{20}{171} = \dfrac{80}{171}\\
-    = 0.46755 \approx 0.468
-\end{align}
+    \intertext{Given: X = 2, X = 4, X = 6 are EQUALLY likely}
+    \pr{X = 2} = \pr{X = 4} = \pr{X = 6} \label{eq:1}\\
+    = \dfrac{\pr{X}}{3} = \dfrac{10}{57}\\
+    \text{Given: } \pr{X \bigm\vert (X > 3) + (Y > 3)} = 0.75\\
+        \frac{\pr{X = 4} + \pr{X = 6}}{\pr{X = 4} + \pr{Y = 5} + \pr{X = 6}}
+        = 0.75 \label{eq:2}\\
+    \implies \text{From \eqref{eq:1} and \eqref{eq:2}: }\pr{Y = 5} = \frac{20}{171}\\
+        \pr{(X > 3) + (Y > 3)}\\ = \pr{X > 3} + \pr{Y > 3}\\
+        = \pr{X = 4} + \pr{Y = 5}\ + \pr{X = 6}\\
+        = \frac{10}{57} + \frac{10}{57} + \frac{20}{171} = \frac{80}{171}\\
+        = 0.46755 \approx 0.468
+    \end{align}
 
 \centering
-\Large $\pr{\text{Face value} > 3}$ = 0.468\\[5pt]
-Option B
+\Large $\pr{\text{Face value} > 3}$ = 0.468\\
+Option B is correct
 \end{document}
